feat(orders): add optimistic stock locking and paginated list endpoints